added level slider for testing and float animation to css

--- a/gemtd.html
+++ b/gemtd.html
@@ -8,6 +8,7 @@
     
     <script src="../build/gemtd.js"></script>
     <link rel="stylesheet" href="gemtd.css" />
+    <link rel="stylesheet" href="slider.css" />
 
 </head>
 
